force-app/main/default/objects/Important_Rating_Snapshot__c/Important_Rating_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Important Rating Snapshot</label>
    <nameField>
        <label>Important Rating Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Important Rating Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>