force-app/main/default/objects/Important_Rating_Snapshot__c/fields/Certification_Rating__c.field-meta.xml
<CustomField>
    <fullName>Certification_Rating__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certification Rating</label>
    <referenceTo>Certification_Rating__c</referenceTo>
    <relationshipLabel>Important Rating Snapshots</relationshipLabel>
    <relationshipName>Important_Rating_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>