force-app/main/default/objects/Important_Rating_Snapshot__c/fields/Importance_Flag__c.field-meta.xml
<CustomField>
    <fullName>Importance_Flag__c</fullName>
    <label>Importance Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>