force-app/main/default/objects/Important_Rating_Snapshot__c/fields/Intercept__c.field-meta.xml
<CustomField>
    <fullName>Intercept__c</fullName>
    <label>Intercept</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>